hud + clean code + javadoc