@@ -1,24 +1,22 @@
-# Projet 
+# Pacman
 
-Modèle basique de projet gradle pour interface graphique avec `swing`.
+Projet réalisé sous java 17 et javafx 21.
 
-Les commandes gradle les plus utiles :
+## Equipe 21
 
-- `gradle test` pour lancer les tests,
-- `gradle run` pour lancer le programme,
-- `gradle shadowJar` pour construire un `jar` dans `build/libs`.
-- `gradle checkStyleMain` pour vérifier le style du code principal avec l'outil [checkstyle](https://checkstyle.sourceforge.io/) (rapports dans `build/reports/checkstyle/`).
-- `gradle checkStyleTest` pour vérifier le style du code de test avec l'outil [checkstyle](https://checkstyle.sourceforge.io/) (rapports dans `build/reports/checkstyle/`).
-- `gradle jacocoTestReport` pour lancer la couverture de code via l'outil [Jacoco](https://www.eclemma.org/jacoco/) (rapports dans `build/reports/jacoco/`). 
-- `gradle spotbugsMain` pour vérifier la présence de bugs dans le code principal avec l'outil [SpotBugs](https://spotbugs.github.io/) (rapports dans `reports/spotbugs/main/spotbugs.html`).
-- `gradle spotbugsTest` pour vérifier la présence de bugs dans le code de test avec l'outil [SpotBugs](https://spotbugs.github.io/) (rapports dans `reports/spotbugs/test/spotbugs.html`).
-- `gradle pmdMain` pour faire l'analyse statique du code principal avec l'outil [PMD](https://pmd.github.io/) (rapports dans `reports/pmd`).
-- `gradle pmdTest` pour faire l'analyse statique du code de test avec l'outil [PMD](https://pmd.github.io/) (rapports dans `reports/pmd`).
+- NEMMICHE Anis
+- AHAMADA Warren
+- THORRE Marius
+- SEGALIE Carla
+- DI GIORGIO MAxime
 
-Le fichier `build.gradle` contient la configuration du projet avec notamment la définition de la classe contenant la méthode `main` à exécuter pour l'application.
+## Usage
 
-Le projet est configuré (via le fichier `.gitlab-ci.yml`) pour produire un jar et lancer les tests sur le serveur à chaque *push*.
+### Avec Gradle
 
-## Copyrights
+- `gradle run` pour lancer le programme.
+- `gradle test` pour lancer les tests.
 
-Image provenant de [Larry Ewing](lewing@isc.tamu.edu) and The GIMP
+### Avec le .jar
+
+- `java --module-path "/path/to/javafx-sdk-21/lib" --add-modules javafx.controls,javafx.fxml -jar game_engine-all.jar` pour lancer le programme.
